# Hedra

./: .gitmodules  CMakeLists.txt  README.md  dependencies.bat  dependencies.sh
src/: CMakeLists.txt
src/Hedra/: CMakeLists.txt  Device.cc  Device.hh  Hedra.hh  Hedrabase.hh  NullSwapChain.hh  Rasterizer.cc  Rasterizer.hh  SwapChain.cc  SwapChain.hh  Vertex.hh
src/Samples/: CMakeLists.txt
src/Samples/HedraTriangle/: Main.cc
